BOARD18 2.4.2 Release Notes

Changes from 2.4.1 Release:
Created cronCode directory to contain code for weekly backups. 
Fixed Bug 67 - New "Useful Links" capability incompatible with snap shots.

BOARD18 2.4.1 Release Notes

Changes from 2.4.0 Release:
Implemented Issue 51 - Provide unlimited tile counts. 
Fixed Issue 66 - Positioning problem with token select menu.
Updated comments in various files to better document functions.
Corrected some minor typos in board18Map and board18Market pages.

BOARD18 2.4.0 Release Notes

Changes from 2.3.2 Release:
Implemented Issue 61 - Correctly rout replies to administrative messages. 
Sorted player display in board18Misc.php and board18New.php.
Revised the enhanced display of players names
on the left side of board18Misc.php and board18New.php.
Also upgraded player's guide to release  4.0.x.

BOARD18 2.3.2 Release Notes

Changes from 2.3.1 Release:
Did some preliminary work for Issue 61 - Correctly rout replies 
to administrative messages. Also enhanced the display of players
on the left side of board18Misc.php and board18New.php.

BOARD18 2.3.1 Release Notes

Changes from 2.3.0 Release:
Implemented Issue 64 Persistent route to desired page on login
Fixed gimpPythonScript batch script.
Added js.cookie.js script to access-denied page.
Fixed documentation in some javascript scripts.
Added link to Tile/Token Library on webSite index page.

BOARD18 2.3.0 Release Notes

Changes from 2.2.2 Release:
Added gimpPythonScripts directory which contains all such scripts.
Revised BOARD18make to eliminate inclusion of any game boxes in .zip file.
Deprecated loadGameBox.php utility. It is no longer needed.
NOTE: There is no longer a GitHub repository for game boxes.

BOARD18 2.2.2 Release Notes

Changes from 2.2.1 Release:
Fixed some typos in loadGameBox.php
Fixed more typos in board18Boxes.php.

BOARD18 2.2.1 Release Notes

Changes from 2.2.0 Release:
Fixed some typos [due to Bug 58 fix] in log notes. 