@@ -1,3 +1,8 @@
+BOARD18 2.4.3 Release Notes
+
+Changes from 2.4.3 Release:
+Implemented Issue 68 - Collapse Help menu.
+
 BOARD18 2.4.2 Release Notes
 
 Changes from 2.4.1 Release:
